--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -19,6 +19,41 @@
   background: #ffed4e; /* Gecko Browsers */
 }
 
+.titleTop {
+  margin: 0;
+  line-height: 1.15;
+  font-size: 4rem;
+  color:#ffde00;
+}
+
+.circle {
+  position:absolute;
+  z-index:-5;
+  width:300px;
+  height:300px;
+  border-radius: 50%;
+  background-color: #000;
+}
+
+.curtain {
+  z-index:-10;
+  position:absolute;
+  width:100%;
+  height:100%;
+  background-color:#fff;
+}
+
+.pisica {
+  position:absolute;
+  z-index:-1;
+  width: 50vw;
+  height:50vh;
+  background-image:url(../public/pisica-cismigiu.jpg);
+  background-size: cover;
+  background-position: center;
+  mix-blend-mode: screen;
+}
+
 .footer {
   display: flex;
   flex: 1;
@@ -50,6 +85,7 @@
   margin: 0;
   line-height: 1.15;
   font-size: 4rem;
+  color:#000;
 }
 
 .title,
